k8s/eks/apps/am-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-am-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-am
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-am
    spec:
      containers:
      - name: redisbank-am
        image: <your image>
        imagePullPolicy: Always
        ports:
        - name: redisbank-am
          containerPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-am-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: redisbank
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: am.<your-prefix>.redisdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisbank-am
            port:
              number: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: redisbank-am
  labels:
    app: redisbank-am
spec:
  ports:
  - port: 8082
    name: redisbank-am
    protocol: TCP
  selector:
    app: redisbank-am
