k8s/eks/apps/pfm-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-pfm-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-pfm
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-pfm
    spec:
      containers:
      - name: redisbank-pfm
        image: <your-image>
        imagePullPolicy: Always
        ports:
        - name: redisbank-pfm
          containerPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-pfm-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: redisbank
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: pfm.<your-prefix>.redisdemo.com
    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: redisbank-pfm
             port:
               number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redisbank-pfm
  labels:
    app: redisbank-pfm
spec:
  ports:
  - port: 8081
    name: redisbank-pfm
    protocol: TCP
  selector:
    app: redisbank-pfm
