k8s/eks/apps/ui-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-ui-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-ui
    spec:
      containers:
      - name: redisbank-ui
        image: <your image>
        imagePullPolicy: Always
        ports:
        - name: redisbank-ui
          containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-ui-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: redisbank
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: ui.<your prefix>.redisdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisbank-ui
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redisbank-ui
  labels:
    app: redisbank-ui
spec:
  ports:
  - port: 8080
    name: redisbank-ui
    protocol: TCP
  selector:
    app: redisbank-ui
